MonetDB/src/mal/Tests/tst007.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## A collection of forloops, which should not execute
#barrier	H := batoperatie;
#	Tail:= bat.fetch(b,H);
#	#body
#redo 	H;
#end	H;
#
#
## de andere loops zijn eenvoudig. 'goto' is altijd beperkt tot
## 'randen' van het blok. (redo L, leave L)
## een while loop
#barrier L := bat.hasMoreElements(b);
#	H:= bat.head(b);
#	v:= bat.nextElement(b);
#redo	L;
#end	L;
#	
##een do-while loop
#	entry:= true;
#barrier M:= entry_or_exittest;
#	entry:= false;
#	# rest
#redo	M;
#end	M;
#
##een for-loop 
#	i:= 1;
#barrier N:= i<10;
#	#body
#	i:=i+1;
#redo	N;
#end	N;
#
#
## de if-then en if-then-else constructies
#
#barrier	FT:= booleanexpr;
#	# thenpart
#end	FT;
#
#barrier	FTE:= booleanexpr;
#	# thenpart
#end	FTE;
#barrier FS:= ~ FTE;
#	#elsepart
#end	FS;
#
#
#
function Admin.main():int;	#0:(main:int->0)
barrier	H := batoperatie;	#1 dynamic:(H:any->13)(batoperatie:any->14)
	Tail := bat.fetch(b,H);	#2 unknown:(Tail:any->15)(b:any->16)(H:any->13)
	redo H ;	#3:(H:any->13)
end	H;	#4:(H:any->13)
barrier	L := bat.hasMoreElements(b);	#5 unknown:(L:any->17)(b:any->16)
	H := bat.head(b);	#6 unknown:(H:any->13)(b:any->16)
	v := bat.nextElement(b);	#7 unknown:(v:any->18)(b:any->16)
	redo L ;	#8:(L:any->17)
end	L;	#9:(L:any->17)
	entry := true;	#10:(entry:bit->19)($20:bit->20)
barrier	M := entry_or_exittest;	#11 dynamic:(M:any->21)(entry_or_exittest:any->22)
	entry := false;	#12:(entry:bit->19)($23:bit->23)
	redo M ;	#13:(M:any->21)
end	M;	#14:(M:any->21)
	i := 1;	#15:(i:int->24)($25:int->25)
barrier	N := arith.<(i,10);	#16:(N:bit->26)(i:int->24)($27:int->27)
	i := arith.+(i,1);	#17:(i:int->24)(i:int->24)($25:int->25)
	redo N ;	#18:(N:bit->26)
end	N;	#19:(N:bit->26)
barrier	FT := booleanexpr;	#20 dynamic:(FT:any->28)(booleanexpr:any->29)
end	FT;	#21:(FT:any->28)
barrier	FTE := booleanexpr;	#22 dynamic:(FTE:any->30)(booleanexpr:any->29)
end	FTE;	#23:(FTE:any->30)
barrier	FS := ~(FTE);	#24 unknown:(FS:any->31)(FTE:any->30)
end	FS;	#25:(FS:any->31)
end function;	#26:
!ERROR: MALexception:Admin.main[2]:Instruction type not fixed
>